--- a/mt_valet/pubspec.yaml
+++ b/mt_valet/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   qr_flutter: ^4.1.0
   firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
