--- a/mt_valet/android/app/build.gradle
+++ b/mt_valet/android/app/build.gradle
@@ -27,7 +27,11 @@ android {
         applicationId = "com.example.mt_valet"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+
+        //minSdk = flutter.minSdkVersion
+
+        minSdkVersion 23
+        
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
