--- a/mt_valet/pubspec.yaml
+++ b/mt_valet/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   qr_flutter: ^4.1.0
 
-  #Firebase dependencies
+  # Firebase dependencies
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
   cloud_firestore: ^5.6.3
   flutter_dotenv: ^5.2.1
+
+  # Lottie
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,15 @@ flutter:
   assets:
     - assets/images/logo.jpg
     - assets/.env
+    - assets/lottie/shiny_car.json
+    - assets/lottie/free_text.json
+    - assets/lottie/incomplete1.json
+    - assets/lottie/incomplete2.json
+    - assets/lottie/incomplete3.json
+    - assets/lottie/incomplete4.json
+    - assets/lottie/incomplete5.json
+
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
