--- a/mt_valet/pubspec.yaml
+++ b/mt_valet/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # Qr code generation
   qr_flutter: ^4.1.0
 
   # Firebase dependencies
@@ -42,9 +44,12 @@ dependencies:
   cloud_firestore: ^5.6.3
   flutter_dotenv: ^5.2.1
 
+  # Qr code scanning
+  mobile_scanner: ^6.0.6
+
   # Lottie
   lottie: ^2.3.2
-  mobile_scanner: ^6.0.7
+  
 
 dev_dependencies:
   flutter_test:
